--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
 
     <style>
-      .modal-content,.container{
+      .modal-content,.containerBg{
         background-image: url("Bgcars.jpg");
         background-size: cover;
         background-repeat: no-repeat;
@@ -20,13 +20,10 @@
       .carousel {
         margin-bottom: 4rem;
       }
-      /* Since positioning the image, we need to help out the caption */
       .carousel-caption {
         bottom: 3rem;
         z-index: 10;
       }
-
-      /* Declare heights because of positioning of img element */
       .carousel-item {
         height: 50rem;
       }
@@ -73,10 +70,58 @@
               <button
               type="button"
               class="btn btn-dark text-white"
+            >
+            Home
+            </button>
+            </li>
+            <li class="nav-item">
+              <button
+              type="button"
+              class="btn btn-dark text-white"
+            >
+            About
+            </button>
+            </li>
+            <li class="nav-item">
+              <button
+              type="button"
+              class="btn btn-dark text-white"
+            >
+            Sell/Buy
+            </button>
+            </li>
+            <li class="nav-item">
+              <button
+              type="button"
+              class="btn btn-dark text-white"
+            >
+            Services
+            </button>
+            </li>
+            <li class="nav-item">
+              <button
+              type="button"
+              class="btn btn-dark text-white"
+            >
+            contact
+            </button>
+            </li>
+            <li class="nav-item">
+              <button
+              type="button"
+              class="btn btn-dark text-white"
               data-bs-toggle="modal"
               data-bs-target="#profileModal"
             >
               Profile
+            </button>
+            </li>
+            <li class="nav-item">
+              <button
+              type="button"
+              class="btn btn-dark text-white"
+            >
+            privacy policy
             </button>
             </li>
           </ul>
@@ -89,7 +134,7 @@
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
           <div>
-            <div class="container p-5 bg-dark text-white">
+            <div class="container containerBg p-5 text-white">
               <div class="row">
                 <div class="col-lg-12 d-flex justify-content-center" style="padding-bottom: 15px;">
                   <div class="btn-group" role="group" aria-label="Basic example">
@@ -204,7 +249,7 @@
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
-            <h6 class="modal-title">Customer Registeration Successful</h6>
+            <h6 class="modal-title text-white">Customer Registeration Successful</h6>
             <button
               type="button"
               class="btn btn-danger"
@@ -231,9 +276,8 @@
             <img src="c2.jpg" alt="" width="100%" height="100%">
             <div class="container">
               <div class="carousel-caption">
-                <h1>Example headline.</h1>
-                <p>Some representative placeholder content for the first slide of the carousel.</p>
-                <p><a class="btn btn-lg btn-primary" href="#">Sign up today</a></p>
+                <h1>It all starts with a dream</h1>
+                <p>Pick your dream car here</p>
               </div>
             </div>
           </div>
@@ -241,19 +285,17 @@
             <img src="c3.jpg" alt="" width="100%" height="100%">
             <div class="container">
               <div class="carousel-caption">
-                <h1>Another example headline.</h1>
+                <h1 class="text-dark">Ride the wind chase the sunset</h1>
                 <p>Some representative placeholder content for the second slide of the carousel.</p>
-                <p><a class="btn btn-lg btn-primary" href="#">Learn more</a></p>
               </div>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="c4.jpg" alt="" width="100%" height="100%">
+            <img src="c5.jpg" alt="" width="100%" height="100%">
             <div class="container">
               <div class="carousel-caption">
-                <h1>One more for good measure.</h1>
+                <h1>Iconic from every angle</h1>
                 <p>Some representative placeholder content for the third slide of this carousel.</p>
-                <p><a class="btn btn-lg btn-primary" href="#">Browse gallery</a></p>
               </div>
             </div>
           </div>
@@ -269,18 +311,15 @@
       </div>
 
 
-      <!-- Marketing messaging and featurettes
-      ================================================== -->
-      <!-- Wrap the rest of the page in another container to center all the content. -->
+      <div class="containerBg p-3 m-3">
 
-      <div class="container">
+        <hr>
 
-        <hr class="featurette-divider">
-
-        <div class="row featurette p-5 m-5">
+        <div class="row p-5 m-5">
           <div class="col-md-7">
-            <h2 class="text-white" style="margin-top: 200px;">First featurette heading. <span class="text-muted">It’ll blow your mind.</span></h2>
-            <p class="lead text-white">Some great placeholder content for the first featurette here. Imagine some exciting prose here.</p>
+            <h2 class="text-white" style="margin-top: 200px;">Car interior designing . <span class="text-muted">Big dreams have small beginnings.</span></h2>
+            <p class="lead text-white">Great web design without functionality is like a sports car with no engine.</p>
+            <p class="lead text-white"> upgrading your car interiors will make your life happy</p>
           </div>
           <div class="col-md-5">
             <img src="sq1.jpg" alt="" width="500" height="500">
@@ -289,22 +328,23 @@
 
         <hr>
 
-        <div class="row featurette p-5 m-5">
+        <div class="row  p-5 m-5">
           <div class="col-md-5">
-            <img src="sq13.jpg" alt="" width="500" height="500">
+            <img src="sq22.jpg" alt="" width="500" height="500">
           </div>
           <div class="col-md-7 p-7">
-            <h2 class="featurette-heading">Oh yeah, it’s that good. <span class="text-muted">See for yourself.</span></h2>
+            <h2 class="text-white" style="margin-top: 200px;">Buy and Sell your cars. <span class="text-muted">See for yourself.</span></h2>
             <p class="lead">Another featurette? Of course. More placeholder content here to give you an idea of how this layout would work with some actual real-world content in place.</p>
           </div>
         </div>
 
-        <hr class="featurette-divider">
+        <hr>
 
-        <div class="row featurette p-5 m-5">
+        <div class="row  p-5 m-5">
           <div class="col-md-7">
-            <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
-            <p class="lead">And yes, this is the last block of representative placeholder content. Again, not really intended to be actually read, simply here to give you a better view of what this would look like with some actual content. Your content.</p>
+            <h2 class="text-white" style="margin-top: 200px;">Car Services. <span class="text-muted">Your car is more than a car</span></h2>
+            <p class="lead text-white">Drive your car at full speed but after getting serviced , Easily founded and Operated</p>
+            <p class="lead text-white">Engineered Minds for your car Problem , Restart your best ride</p>
           </div>
           <div class="col-md-5">
             <img src="sq2.jpg" alt="" width="500" height="500">
@@ -422,7 +462,7 @@
           </div>
         </div>
       </div>
-      <footer id="footer" class="footer">
+      <footer id="footer" class="footer bg-dark text-white">
 
         <div class="footer-content position-relative">
           <div class="container">
