--- a/index.html
+++ b/index.html
@@ -44,26 +44,11 @@
       aria-label="Fourth navbar example"
     >
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Car World</a>
-        </button>
+        <a class="navbar-brand" href="#">King Mechanic</a>
+        
 
         <div class="collapse navbar-collapse" id="navbarsExample04">
           <ul class="navbar-nav me-auto mb-2 mb-md-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item">
-              <a
-                class="nav-link disabled"
-                href="#"
-                tabindex="-1"
-                aria-disabled="true"
-                >Disabled</a
-              >
-            </li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li class="nav-item">
@@ -286,7 +271,7 @@
             <div class="container">
               <div class="carousel-caption">
                 <h1 class="text-dark">Ride the wind chase the sunset</h1>
-                <p>Some representative placeholder content for the second slide of the carousel.</p>
+                <p class="text-dark">Drive your car at full speed but after getting serviced , Easily founded and Operated.</p>
               </div>
             </div>
           </div>
@@ -295,7 +280,7 @@
             <div class="container">
               <div class="carousel-caption">
                 <h1>Iconic from every angle</h1>
-                <p>Some representative placeholder content for the third slide of this carousel.</p>
+                <p>Engineered Minds for your car Problem.</p>
               </div>
             </div>
           </div>
@@ -319,7 +304,7 @@
           <div class="col-md-7">
             <h2 class="text-white" style="margin-top: 200px;">Car interior designing . <span class="text-muted">Big dreams have small beginnings.</span></h2>
             <p class="lead text-white">Great web design without functionality is like a sports car with no engine.</p>
-            <p class="lead text-white"> upgrading your car interiors will make your life happy</p>
+            <p class="lead text-white"> The cars we drive, say a lot about us</p>
           </div>
           <div class="col-md-5">
             <img src="sq1.jpg" alt="" width="500" height="500">
@@ -334,7 +319,8 @@
           </div>
           <div class="col-md-7 p-7">
             <h2 class="text-white" style="margin-top: 200px;">Buy and Sell your cars. <span class="text-muted">See for yourself.</span></h2>
-            <p class="lead">Another featurette? Of course. More placeholder content here to give you an idea of how this layout would work with some actual real-world content in place.</p>
+            <p class="lead text-white">Buy the car you want ,drive the road you want.</p>
+            <p class="lead text-white">Everything in life is taking you somewhere else and you get there in a car</p>
           </div>
         </div>
 
