--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
             <img src="sq22.jpg" alt="" width="500" height="500">
           </div>
           <div class="col-md-7 p-7">
-            <h2 class="text-white" style="margin-top: 200px;">Buy and Sell your cars. <span class="text-muted">See for yourself.</span></h2>
+            <h2 class="text-white" style="margin-top: 200px;">Buy and Sell your cars. </h2>
             <p class="lead text-white">Buy the car you want ,drive the road you want.</p>
             <p class="lead text-white">Everything in life is taking you somewhere else and you get there in a car</p>
           </div>
@@ -448,7 +448,7 @@
           </div>
         </div>
       </div>
-      <footer id="footer" class="footer bg-dark text-white">
+      <footer id="footer" class="footer bg-dark text-white p-5 ">
 
         <div class="footer-content position-relative">
           <div class="container">
@@ -456,19 +456,13 @@
 
               <div class="col-lg-4 col-md-6">
                 <div class="footer-info">
-                  <h3>UpConstruction</h3>
+                  <h3>King Mechanics</h3>
                   <p>
-                    A108 Adam Street <br>
-                    NY 535022, USA<br><br>
+                    RMZ ECOSPACE<br>
+                    Bellandur, Bangalore<br><br>
                     <strong>Phone:</strong> +1 5589 55488 55<br>
-                    <strong>Email:</strong> info@example.com<br>
+                    <strong>Email:</strong> kingmechanico@gmail.com<br>
                   </p>
-                  <div class="social-links d-flex mt-3">
-                    <a href="#" class="d-flex align-items-center justify-content-center"><i class="bi bi-twitter"></i></a>
-                    <a href="#" class="d-flex align-items-center justify-content-center"><i class="bi bi-facebook"></i></a>
-                    <a href="#" class="d-flex align-items-center justify-content-center"><i class="bi bi-instagram"></i></a>
-                    <a href="#" class="d-flex align-items-center justify-content-center"><i class="bi bi-linkedin"></i></a>
-                  </div>
                 </div>
               </div><!-- End footer info column-->
 
@@ -486,33 +480,10 @@
               <div class="col-lg-2 col-md-3 footer-links">
                 <h4>Our Services</h4>
                 <ul>
-                  <li><a href="#">Web Design</a></li>
-                  <li><a href="#">Web Development</a></li>
-                  <li><a href="#">Product Management</a></li>
-                  <li><a href="#">Marketing</a></li>
-                  <li><a href="#">Graphic Design</a></li>
-                </ul>
-              </div><!-- End footer links column-->
-
-              <div class="col-lg-2 col-md-3 footer-links">
-                <h4>Hic solutasetp</h4>
-                <ul>
-                  <li><a href="#">Molestiae accusamus iure</a></li>
-                  <li><a href="#">Excepturi dignissimos</a></li>
-                  <li><a href="#">Suscipit distinctio</a></li>
-                  <li><a href="#">Dilecta</a></li>
-                  <li><a href="#">Sit quas consectetur</a></li>
-                </ul>
-              </div><!-- End footer links column-->
-
-              <div class="col-lg-2 col-md-3 footer-links">
-                <h4>Nobis illum</h4>
-                <ul>
-                  <li><a href="#">Ipsam</a></li>
-                  <li><a href="#">Laudantium dolorum</a></li>
-                  <li><a href="#">Dinera</a></li>
-                  <li><a href="#">Trodelas</a></li>
-                  <li><a href="#">Flexo</a></li>
+                  <li>Car interior Designing</li>
+                  <li>Buy and sell cars</li>
+                  <li>upgrading your car</li>
+                  <li>servicing your cars</li>
                 </ul>
               </div><!-- End footer links column-->
 
@@ -523,24 +494,12 @@
         <div class="footer-legal text-center position-relative">
           <div class="container">
             <div class="copyright">
-              &copy; Copyright <strong><span>UpConstruction</span></strong>. All Rights Reserved
-            </div>
-            <div class="credits">
-              <!-- All the links in the footer should remain intact. -->
-              <!-- You can delete the links only if you purchased the pro version. -->
-              <!-- Licensing information: https://bootstrapmade.com/license/ -->
-              <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/upconstruction-bootstrap-construction-website-template/ -->
-              Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+              &copy; Copyright <strong><span>King Mechanics</span></strong>. All Rights Reserved
             </div>
           </div>
         </div>
 
       </footer>
     </main>
-
-
-        <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
-
-
       </body>
     </html>
