--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       rel="stylesheet"
     />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <style>
       .modal-content,.containerBg{
@@ -317,7 +318,7 @@
           <div class="col-md-5">
             <img src="sq22.jpg" alt="" width="500" height="500">
           </div>
-          <div class="col-md-7 p-7">
+          <div class="col-md-7">
             <h2 class="text-white" style="margin-top: 200px;">Buy and Sell your cars. </h2>
             <p class="lead text-white">Buy the car you want ,drive the road you want.</p>
             <p class="lead text-white">Everything in life is taking you somewhere else and you get there in a car</p>
@@ -337,60 +338,63 @@
           </div>
         </div>
 
-        <hr class="featurette-divider">
+        <hr>
 
-        <!-- /END THE FEATURETTES -->
 
-      </div><!-- /.container -->
 
-      <div class="album py-5 bg-light">
+      </div>
+
+      <div class="bg-light">
         <div class="container">
 
           <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3 p-5">
             <div class="col">
               <div class="card shadow-sm">
-                <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-
-                <div class="card-body">
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                  <div class="d-flex justify-content-between align-items-center">
-                    <div class="btn-group">
-                      <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                      <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+              <img src="th1.jpg" width="100%" height="100%">
+               <div class="card-body">
+                   <div class="d-flex justify-content-between align-items-center">
+                    <p class="card-text pt-3" >Car Painting</p>
+                    <div>
+                      <span class="fa fa-star" style="color: orange;"></span>
+                      <span class="fa fa-star" style="color: orange;"></span>
+                      <span class="fa fa-star" style="color: orange;"></span>
+                      <span class="fa fa-star"></span>
+                      <span class="fa fa-star"></span>
                     </div>
-                    <small class="text-muted">9 mins</small>
                   </div>
                 </div>
               </div>
             </div>
             <div class="col">
               <div class="card shadow-sm">
-                <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-
-                <div class="card-body">
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                  <div class="d-flex justify-content-between align-items-center">
-                    <div class="btn-group">
-                      <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                      <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+              <img src="th2.jpg" width="100%" height="100%">
+               <div class="card-body">
+                   <div class="d-flex justify-content-between align-items-center">
+                    <p class="card-text pt-3" >Car Wash</p>
+                    <div>
+                      <span class="fa fa-star" style="color: orange;"></span>
+                      <span class="fa fa-star" style="color: orange;"></span>
+                      <span class="fa fa-star" style="color: orange;"></span>
+                      <span class="fa fa-star" style="color: orange;"></span>
+                      <span class="fa fa-star" style="color: orange;"></span>
                     </div>
-                    <small class="text-muted">9 mins</small>
                   </div>
                 </div>
               </div>
             </div>
             <div class="col">
               <div class="card shadow-sm">
-                <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-
-                <div class="card-body">
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                  <div class="d-flex justify-content-between align-items-center">
-                    <div class="btn-group">
-                      <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                      <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+              <img src="th3.jpg" width="100%" height="100%">
+               <div class="card-body">
+                   <div class="d-flex justify-content-between align-items-center">
+                    <p class="card-text pt-3" >Car Service</p>
+                    <div>
+                      <span class="fa fa-star" style="color: orange;"></span>
+                      <span class="fa fa-star" style="color: orange;"></span>
+                      <span class="fa fa-star" style="color: orange;"></span>
+                      <span class="fa fa-star"style="color: orange;"></span>
+                      <span class="fa fa-star"></span>
                     </div>
-                    <small class="text-muted">9 mins</small>
                   </div>
                 </div>
               </div>
@@ -398,48 +402,51 @@
 
             <div class="col">
               <div class="card shadow-sm">
-                <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-
-                <div class="card-body">
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                  <div class="d-flex justify-content-between align-items-center">
-                    <div class="btn-group">
-                      <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                      <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+              <img src="sq1.jpg" width="100%" height="100%">
+               <div class="card-body">
+                   <div class="d-flex justify-content-between align-items-center">
+                    <p class="card-text pt-3" >Car Interior Change</p>
+                    <div>
+                      <span class="fa fa-star" style="color: orange;"></span>
+                      <span class="fa fa-star" style="color: orange;"></span>
+                      <span class="fa fa-star" style="color: orange;"></span>
+                      <span class="fa fa-star"></span>
+                      <span class="fa fa-star"></span>
                     </div>
-                    <small class="text-muted">9 mins</small>
                   </div>
                 </div>
               </div>
             </div>
             <div class="col">
               <div class="card shadow-sm">
-                <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-
-                <div class="card-body">
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                  <div class="d-flex justify-content-between align-items-center">
-                    <div class="btn-group">
-                      <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                      <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+              <img src="sq22.jpg" width="100%" height="100%">
+               <div class="card-body">
+                   <div class="d-flex justify-content-between align-items-center">
+                    <p class="card-text pt-3" >Buying a Used Car</p>
+                    <div>
+                      <span class="fa fa-star" style="color: orange;"></span>
+                      <span class="fa fa-star" style="color: orange;"></span>
+                      <span class="fa fa-star" style="color: orange;"></span>
+                      <span class="fa fa-star"></span>
+                      <span class="fa fa-star"></span>
                     </div>
-                    <small class="text-muted">9 mins</small>
                   </div>
                 </div>
               </div>
             </div>
             <div class="col">
               <div class="card shadow-sm">
-                <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-
-                <div class="card-body">
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                  <div class="d-flex justify-content-between align-items-center">
-                    <div class="btn-group">
-                      <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                      <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+              <img src="sq2.jpg" width="100%" height="100%">
+               <div class="card-body">
+                   <div class="d-flex justify-content-between align-items-center">
+                    <p class="card-text pt-3" >Customise your cars</p>
+                    <div>
+                      <span class="fa fa-star" style="color: orange;"></span>
+                      <span class="fa fa-star" style="color: orange;"></span>
+                      <span class="fa fa-star" style="color: orange;"></span>
+                      <span class="fa fa-star"></span>
+                      <span class="fa fa-star"></span>
                     </div>
-                    <small class="text-muted">9 mins</small>
                   </div>
                 </div>
               </div>
