--- a/services.html
+++ b/services.html
@@ -372,6 +372,104 @@
             </div>
           </div>
 
+
+
+          <div class="accordion" id="accordionPanelsStayOpenExample" style="padding-top: 20px;">
+
+            <button class="btn btn-dark">Filter By</button>
+
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="panelsStayOpen-headingOne">
+                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
+                  Car Name
+                </button>
+              </h2>
+              <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
+                <div class="accordion-body">
+                  <ul class="list-group list-group-flush">
+                    <li class="btn btn-dark list-group-item">Ferrari</li>
+                    <li class="btn btn-dark list-group-item">Maserati</li>
+                    <li class="btn btn-dark list-group-item">Rolls Royce</li>
+                    <li class="btn btn-dark list-group-item">Aston Martin</li>
+                    <li class="btn btn-dark list-group-item">	Bentley GT</li>
+                  </ul> 
+                </div>
+              </div>
+            </div>
+
+
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
+                  Model
+                </button>
+              </h2>
+              <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
+                <div class="accordion-body">
+                  <ul class="list-group list-group-flush">
+                    <li class="btn btn-primary list-group-item">1993 - 1998</li>
+                    <li class="btn btn-primary list-group-item">1999 - 2004</li>
+                    <li class="btn btn-primary list-group-item">2005 - 2010</li>
+                    <li class="btn btn-primary list-group-item">2011 - 2016</li>
+                    <li class="btn btn-primary list-group-item">2017 - 2022</li>
+                  </ul> 
+                </div>
+              </div>
+            </div>
+
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
+                  Transmission
+                </button>
+              </h2>
+              <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
+                <div class="accordion-body">
+                  <ul class="list-group list-group-flush">
+                    <li class="btn btn-success list-group-item">Automatic</li>
+                    <li class="btn btn-success list-group-item">Manual</li>
+                  </ul> 
+                </div>
+              </div>
+            </div>
+
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
+                  Mileage
+                </button>
+              </h2>
+              <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
+                <div class="accordion-body">
+                  <ul class="list-group list-group-flush">
+                    <li class="btn btn-danger list-group-item">20 - 30</li>
+                    <li class="btn btn-danger list-group-item">30 - 40</li>
+                    <li class="btn btn-danger list-group-item">40 - 50</li>
+                  </ul> 
+                </div>
+              </div>
+            </div>
+
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
+                  Seats
+                </button>
+              </h2>
+              <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
+                <div class="accordion-body">
+                  <ul class="list-group list-group-flush">
+                    <li class="btn btn-danger list-group-item">2</li>
+                    <li class="btn btn-danger list-group-item">4</li>
+                    <li class="btn btn-danger list-group-item">6</li>
+                    <li class="btn btn-danger list-group-item">8</li>
+                  </ul> 
+                </div>
+              </div>
+            </div>
+
+          </div>
+
         </div>
 
         <div class="col-md-9 bg-dark">
@@ -424,14 +522,14 @@
               <table class="table table-borderless text-white">
                 <thead>
                   <tr>
-                    <th>Hari Prasanth S</th>
+                    <th>Rajinikanth</th>
                     <th></th>
                     <th></th>
                     <th></th>
                     <th></th>
                     <th></th>
                     <th></th>
-                    <th><button class="btn btn-success">New Car</button> </th>
+                    <th><button class="btn btn-danger">Used Car</button> </th>
                   </tr>
                 </thead>
                 <tbody>
@@ -465,7 +563,7 @@
               <table class="table table-borderless text-white">
                 <thead>
                   <tr>
-                    <th>Manoj Kumar</th>
+                    <th></th>
                     <th></th>
                     <th></th>
                     <th></th>
@@ -478,13 +576,13 @@
                 <tbody>
                   <tr>
                     <td style="font-weight: bold;">Car Name </td>
-                    <td>Ferrari</td>
+                    <td>Rolls Royce</td>
                     <td style="font-weight: bold;">Model</td>
                     <td>2014</td>
                     <td style="font-weight: bold;">Buying Price</td>
                     <td>45000000</td>
                     <td style="font-weight: bold;">Transmission</td>
-                    <td>Manual</td>
+                    <td>Automatic</td>
                   </tr>
                   <tr>
                     <td style="font-weight: bold;">Mileage</td>
@@ -492,7 +590,7 @@
                     <td style="font-weight: bold;">Selling Price</td>
                     <td>40000000</td>
                     <td style="font-weight: bold;">Seats</td>
-                    <td>2</td>
+                    <td>6</td>
                     <td></td>
                     <td><button class="btn btn-primary"> View Details</button></td>
                   </tr>                
@@ -506,7 +604,7 @@
               <table class="table table-borderless text-white">
                 <thead>
                   <tr>
-                    <th>Kumar</th>
+                    <th></th>
                     <th></th>
                     <th></th>
                     <th></th>
@@ -521,7 +619,7 @@
                     <td style="font-weight: bold;">Car Name </td>
                     <td>Aston Martin</td>
                     <td style="font-weight: bold;">Model</td>
-                    <td>2014</td>
+                    <td>2006</td>
                     <td style="font-weight: bold;">Buying Price</td>
                     <td>45000000</td>
                     <td style="font-weight: bold;">Transmission</td>
@@ -547,7 +645,7 @@
               <table class="table table-borderless text-white">
                 <thead>
                   <tr>
-                    <th>Charan Kumar</th>
+                    <th>Charan</th>
                     <th></th>
                     <th></th>
                     <th></th>
@@ -588,7 +686,7 @@
               <table class="table table-borderless text-white">
                 <thead>
                   <tr>
-                    <th>Charan Kumar</th>
+                    <th>Manoj</th>
                     <th></th>
                     <th></th>
                     <th></th>
@@ -629,7 +727,7 @@
               <table class="table table-borderless text-white">
                 <thead>
                   <tr>
-                    <th>Charan Kumar</th>
+                    <th>Surya</th>
                     <th></th>
                     <th></th>
                     <th></th>
@@ -670,7 +768,7 @@
               <table class="table table-borderless text-white">
                 <thead>
                   <tr>
-                    <th>Charan Kumar</th>
+                    <th></th>
                     <th></th>
                     <th></th>
                     <th></th>
@@ -711,7 +809,7 @@
               <table class="table table-borderless text-white">
                 <thead>
                   <tr>
-                    <th>Charan Kumar</th>
+                    <th></th>
                     <th></th>
                     <th></th>
                     <th></th>
@@ -752,7 +850,7 @@
               <table class="table table-borderless text-white">
                 <thead>
                   <tr>
-                    <th>Charan Kumar</th>
+                    <th>Gautham</th>
                     <th></th>
                     <th></th>
                     <th></th>
@@ -793,7 +891,7 @@
               <table class="table table-borderless text-white">
                 <thead>
                   <tr>
-                    <th>Charan Kumar</th>
+                    <th>Kajal agarwal</th>
                     <th></th>
                     <th></th>
                     <th></th>
@@ -834,7 +932,7 @@
               <table class="table table-borderless text-white">
                 <thead>
                   <tr>
-                    <th>Charan Kumar</th>
+                    <th></th>
                     <th></th>
                     <th></th>
                     <th></th>
@@ -875,7 +973,7 @@
               <table class="table table-borderless text-white">
                 <thead>
                   <tr>
-                    <th>Charan Kumar</th>
+                    <th>Dhanush</th>
                     <th></th>
                     <th></th>
                     <th></th>
@@ -916,7 +1014,7 @@
               <table class="table table-borderless text-white">
                 <thead>
                   <tr>
-                    <th>Charan Kumar</th>
+                    <th></th>
                     <th></th>
                     <th></th>
                     <th></th>
