--- a/services.html
+++ b/services.html
@@ -419,11 +419,11 @@
 
             <div class="accordion-item">
               <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
                   Transmission
                 </button>
               </h2>
-              <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
+              <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
                 <div class="accordion-body">
                   <ul class="list-group list-group-flush">
                     <li class="btn btn-success list-group-item">Automatic</li>
@@ -435,16 +435,16 @@
 
             <div class="accordion-item">
               <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseFour" aria-expanded="false" aria-controls="panelsStayOpen-collapseFour">
                   Mileage
                 </button>
               </h2>
-              <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
+              <div id="panelsStayOpen-collapseFour" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
                 <div class="accordion-body">
                   <ul class="list-group list-group-flush">
-                    <li class="btn btn-danger list-group-item">20 - 30</li>
-                    <li class="btn btn-danger list-group-item">30 - 40</li>
-                    <li class="btn btn-danger list-group-item">40 - 50</li>
+                    <li class="btn btn-danger list-group-item">20 Kmpl - 30 Kmpl</li>
+                    <li class="btn btn-danger list-group-item">30 Kmpl - 40 Kmpl</li>
+                    <li class="btn btn-danger list-group-item">40 Kmpl - 50 Kmpl</li>
                   </ul> 
                 </div>
               </div>
@@ -452,17 +452,17 @@
 
             <div class="accordion-item">
               <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseFive" aria-expanded="false" aria-controls="panelsStayOpen-collapseFive">
                   Seats
                 </button>
               </h2>
-              <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
+              <div id="panelsStayOpen-collapseFive" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
                 <div class="accordion-body">
                   <ul class="list-group list-group-flush">
-                    <li class="btn btn-danger list-group-item">2</li>
-                    <li class="btn btn-danger list-group-item">4</li>
-                    <li class="btn btn-danger list-group-item">6</li>
-                    <li class="btn btn-danger list-group-item">8</li>
+                    <li class="btn btn-warning list-group-item">2</li>
+                    <li class="btn btn-warning list-group-item">4</li>
+                    <li class="btn btn-warning list-group-item">6</li>
+                    <li class="btn btn-warning list-group-item">8</li>
                   </ul> 
                 </div>
               </div>
