--- a/index.html
+++ b/index.html
@@ -53,12 +53,9 @@
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li class="nav-item">
-              <button
-              type="button"
-              class="btn btn-dark text-white"
-            >
-            Home
-            </button>
+              <a href="index.html"><button
+                type="button"
+                class="btn btn-dark text-white">Services</button></a>
             </li>
             <li class="nav-item">
               <button
@@ -469,7 +466,7 @@
                     RMZ ECOSPACE<br>
                     Bellandur, Bangalore<br><br>
                     <strong>Phone:</strong> +1 5589 55488 55<br>
-                    <strong>Email:</strong> kingmechanico@gmail.com<br>
+                    <strong>Email:</strong> kingmechanic@gmail.com<br>
                   </p>
                 </div>
               </div><!-- End footer info column-->
