--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <li class="nav-item">
               <a href="index.html"><button
                 type="button"
-                class="btn btn-dark text-white">Services</button></a>
+                class="btn btn-dark text-white">Home</button></a>
             </li>
             <li class="nav-item">
               <button
