--- a/services.html
+++ b/services.html
@@ -53,12 +53,9 @@
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li class="nav-item">
-              <button
-              type="button"
-              class="btn btn-dark text-white"
-            >
-            Home
-            </button>
+              <a href="index.html"><button
+                type="button"
+                class="btn btn-dark text-white">Home</button></a>
             </li>
             <li class="nav-item">
               <button
