--- a/services.html
+++ b/services.html
@@ -45,7 +45,9 @@
       aria-label="Fourth navbar example"
     >
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">King Mechanic</a>
+        <a class="navbar-brand" href="index.html"><button
+          type="button"
+          class="btn btn-dark text-white">King Mechanic</button></a>
         
 
         <div class="collapse navbar-collapse" id="navbarsExample04">
