--- a/services.html
+++ b/services.html
@@ -45,6 +45,7 @@
       aria-label="Fourth navbar example"
     >
       <div class="container-fluid">
+        <img src="logo.jpg" height="46px" width="46px" style="border-radius: 50%;">
         <a class="navbar-brand" href="index.html"><button
           type="button"
           class="btn btn-dark text-white">King Mechanic</button></a>
@@ -65,14 +66,6 @@
               class="btn btn-dark text-white"
             >
             About
-            </button>
-            </li>
-            <li class="nav-item">
-              <button
-              type="button"
-              class="btn btn-dark text-white"
-            >
-            Sell/Buy
             </button>
             </li>
             <li class="nav-item">
